
=======================================================
            WanT code:  Log of Changes 
=======================================================


Nov 23 2010      iotk-lib update to version 1.2.1 . Makefile system slighlty
                 modified. (AF)

Nov 21 2010      scale, shift parameters added to dos.f90. (AF)

Oct 31 2010      Bug fixed in embed. Trace of the gamma function (coupling matrix)
                 printed out in the dos file. Test14 updated. (AF)

Oct 30 2010      Bug fixed in embed when using smearing different from lorentzian.
                 Test14 updated with an example of gaussian smearing. (AF)

Oct 24 2010      Further cleanup in embed.f90 and util.f90 . (AF)

Oct 20 2010      Problem (bug?) in g95 when linking ZDOTC. Workaround added to
                 precompiler by using -D__WORKAROUND_ZDOTC. iotk_cleanup added. (AF)

Oct 19 2010      plot.f90 cleaned up (no ifort warninf msgs when writing cube data). 
                 cleanup in writing data and managing arrays in conductor.f90 .
                 Bug fixed in current.f90 . Cleanup in many parts of the code
                 according to ifort debugger report. (AF)

Oct 08 2010      test15 added. bug fixed in sumpdos.f90. (AF)

Oct 07 2010      conductor writes kdata also resolved wrt eigenchannels. (AF)

Oct 06 2010      plot.x program updated to deal with kpt when plotting 
                 eigenchannels. Checks performed. (AF)

Sep 29 2010      bug fixed in plot; bug fixed in hamiltonian_calc; qexml.f90
                 lib updated to take into account a bug fixed in QE. (AF)

Sep 28 2010      bug fixed: non-hermiticity of resulting hamiltonian 
                 on the wannier basis avoided. Verbosity added to all postprocs. 
                 Documentation updated. Test14 added to check embed. 
                 Version updated to 2.4.0-alpha2. (AF)

Jul 07 2010      bug fixed in the definition of eigenchannel orbitals.