@@ -152,11 +152,13 @@
    REAL(dbl) :: win_max =   20000000.0_dbl
        ! the upper bound of the above defined energy window
 
-   INTEGER   :: iwin_min(nkptsx) = 0
-   INTEGER   :: iwin_max(nkptsx) = 0
+   INTEGER   :: iwin_mink(nkptsx) = 0
+   INTEGER   :: iwin_maxk(nkptsx) = 0
+   INTEGER   :: iwin_min          = 0
+   INTEGER   :: iwin_max          = 0
        ! min and max indexes defining the above energy window (for each kpt)
        ! if specified they overwrite the definitions given by win_min and
-       ! win_max
+       ! win_max. iwin_min, iwin_max set the values for all kpts 
 
    REAL(dbl) :: froz_min = -60000000.0_dbl
        ! the lower bound of a second energy window which "frozes" the
@@ -165,11 +167,13 @@
    REAL(dbl) :: froz_max = -50000000.0_dbl
        ! the upper bound of the frozen energy window
 
-   INTEGER   :: ifroz_min(nkptsx) =  0
-   INTEGER   :: ifroz_max(nkptsx) = -1
+   INTEGER   :: ifroz_mink(nkptsx) =  0
+   INTEGER   :: ifroz_maxk(nkptsx) = -1
+   INTEGER   :: ifroz_min          =  0
+   INTEGER   :: ifroz_max          = -1
        ! min and max indexes defining the frozen energy window (for each kpt)
        ! if specified they overwrite the definitions given by froz_min and
-       ! froz_max
+       ! froz_max. ifroz_min, ifroz_max set the values for all kpts 
 
    REAL(dbl) :: efermi = -60000000.0_dbl
        ! Fermi energy is taken from input and not read from file
@@ -235,13 +239,16 @@
 ! XXX
 
    NAMELIST / SUBSPACE / dimwann, win_min, win_max, froz_min, froz_max, &
-                         iwin_min, iwin_max, ifroz_min, ifroz_max, spin_component, &
+                         iwin_mink, iwin_maxk, ifroz_mink, ifroz_maxk, spin_component, &
+                         iwin_min,  iwin_max,  ifroz_min,  ifroz_max, &
                          alpha_dis, maxiter_dis, disentangle_thr, nprint_dis, nsave_dis, &
                          subspace_init, use_blimit, use_symmetry, use_timerev, efermi 
 
 
-   PUBLIC :: dimwann, win_min, win_max, froz_min, froz_max 
-   PUBLIC :: iwin_min, iwin_max, ifroz_min, ifroz_max, spin_component
+   PUBLIC :: dimwann, spin_component
+   PUBLIC :: win_min,   win_max,   froz_min,   froz_max 
+   PUBLIC :: iwin_mink, iwin_maxk, ifroz_mink, ifroz_maxk
+   PUBLIC :: iwin_min,  iwin_max,  ifroz_min,  ifroz_max
    PUBLIC :: use_blimit, use_symmetry, use_timerev, efermi, do_efermi
    PUBLIC :: alpha_dis, maxiter_dis, nprint_dis, nsave_dis, disentangle_thr, subspace_init
    PUBLIC :: SUBSPACE
@@ -475,10 +482,14 @@ CONTAINS
       CALL mp_bcast( dimwann,            ionode_id )
       CALL mp_bcast( win_min,            ionode_id )
       CALL mp_bcast( win_max,            ionode_id )
+      CALL mp_bcast( iwin_mink,          ionode_id )
+      CALL mp_bcast( iwin_maxk,          ionode_id )
       CALL mp_bcast( iwin_min,           ionode_id )
       CALL mp_bcast( iwin_max,           ionode_id )
       CALL mp_bcast( froz_min,           ionode_id )
       CALL mp_bcast( froz_max,           ionode_id )
+      CALL mp_bcast( ifroz_mink,         ionode_id )
+      CALL mp_bcast( ifroz_maxk,         ionode_id )
       CALL mp_bcast( ifroz_min,          ionode_id )
       CALL mp_bcast( ifroz_max,          ionode_id )
       CALL mp_bcast( spin_component,     ionode_id )
@@ -500,11 +511,16 @@ CONTAINS
       !
       IF ( win_max <= win_min )     CALL errore(subname, 'win_max <= win_min ', 1 )
       IF ( froz_max <= froz_min )   CALL errore(subname, 'win_max <= win_min ', 1 )
-      IF ( ANY( iwin_min < 0 ))     CALL errore(subname, 'invalid values in iwin_min',2)
-      IF ( ANY( iwin_max < 0 ))     CALL errore(subname, 'invalid values in iwin_max',2)
-      IF ( ANY( ifroz_min < 0 ))    CALL errore(subname, 'invalid values in ifroz_min',2)
-      IF ( ANY( ifroz_max < -1 ))   CALL errore(subname, 'invalid values in ifroz_max',2)
-      IF ( ANY( ifroz_max == 0 ))   CALL errore(subname, 'invalid values in ifroz_max II',2)
+      IF ( iwin_min < 0 )           CALL errore(subname, 'invalid values in iwin_min',2)
+      IF ( iwin_max < 0 )           CALL errore(subname, 'invalid values in iwin_max',2)
+      IF ( ifroz_min < 0 )          CALL errore(subname, 'invalid values in ifroz_min',2)
+      IF ( ifroz_max < -1 )         CALL errore(subname, 'invalid values in ifroz_max',2)
+      IF ( ifroz_max == 0 )         CALL errore(subname, 'invalid values in ifroz_max II',2)
+      IF ( ANY( iwin_mink < 0 ))    CALL errore(subname, 'invalid values in iwin_mink',2)
+      IF ( ANY( iwin_maxk < 0 ))    CALL errore(subname, 'invalid values in iwin_maxk',2)
+      IF ( ANY( ifroz_mink < 0 ))   CALL errore(subname, 'invalid values in ifroz_mink',2)
+      IF ( ANY( ifroz_maxk < -1 ))  CALL errore(subname, 'invalid values in ifroz_maxk',2)
+      IF ( ANY( ifroz_maxk == 0 ))  CALL errore(subname, 'invalid values in ifroz_maxk II',2)
       IF ( dimwann <= 0 )           CALL errore(subname, 'dimwann should be positive ', -dimwann+1 ) 
       IF ( alpha_dis <= 0.0 )       CALL errore(subname, 'alpha_dis should be positive ', 1 ) 
       IF ( alpha_dis > 1.0)         CALL errore(subname, 'alpha_dis should <=1.0 ', 1 ) 
